--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>Flowers</title>
 </head>
+
 <body>
     <div class="greetings">
         <span>Hola</span> <span>Aleja</span>
 
     </div>
     <div class="description">
-        <span>Espero que estes teniendo un buen comienzo de semana y esto alegre tu dia!!</span>
+        <span>Ya no estes triste😊(●'◡'●)</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Reclamar sorpresa</a>
+            <a href="flower.html">Presiona para no estar triste😊</a>
         </button>
         
     </div>
