--- a/flower.html
+++ b/flower.html
@@ -14,7 +14,7 @@
     <source src="/song/frownies.mp4" type="audio/mp4">
   </audio>
      
-    <div class="title">Estas flores son un reflejo para traerte alegría y sonrisas</div>
+    <div class="title">Sonrie</div>
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
