--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     </div>
     <div class="description">
-        <span>Ya no estes triste😊(●'◡'●)</span>
+        <span>Hay que vivir con alegria</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Presiona para no estar triste😊</a>
+            <a href="flower.html">Presiona para alegrarte😊</a>
         </button>
         
     </div>
