--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <div class="greetings">
-        <span>Hola</span> <span>Aleja</span>
+        <span>Hola</span> <span>Marce</span>
 
     </div>
     <div class="description">
-        <span>Hay que vivir con alegria</span>
+        <span>Ten un estupendo domingo</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Presiona para alegrarte😊</a>
+            <a href="flower.html">Presiona para recibir un regalo😊</a>
         </button>
         
     </div>
