--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="greetings">
-        <span>Hola</span> <span>Nat</span>
+        <span>Feliz dia de la mujer</span>
 
     </div>
     <div class="description">
-        <span>Ten un estupendo día</span>
+        <span>Que hayas tenido un estupendo día</span>
     </div>
     <div class="button">
         <button>
