--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="greetings">
-        <span>Feliz dia de la mujer</span>
+        <span>Feliz cumpleaños</span>
 
     </div>
     <div class="description">
