--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="greetings">
-        <span>Feliz cumpleaños</span>
+        <span>Feliz Inicio de Semana</span>
 
     </div>
     <div class="description">
-        <span>Que hayas tenido un estupendo día</span>
+        <span>Que tengas un estupendo día</span>
     </div>
     <div class="button">
         <button>
