--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="greetings">
-        <span>Feliz Miercoles</span>
+        <span>Feliz Dia de la Mujer</span>
 
     </div>
     <div class="description">
-        <span>Que tengas un estupendo día mañana</span>
+        <span>Que tengas un estupendo día</span>
     </div>
     <div class="button">
         <button>
