--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="greetings">
-        <span>Buen inicio de semana Vale</span>
+        <span>Tienes un hermoso cabello Marce</span>
 
     </div>
     <div class="description">
-        <span>Espero que esto alegre tu dia y te guste</span>
+        <span>Que te saque una sonrisa!!!</span>
     </div>
     <div class="button">
         <button>
