--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="greetings">
-        <span>Tienes un hermoso cabello Marce</span>
+        <span>Hola Olga, espero que estes teniendo una buena noche</span>
 
     </div>
     <div class="description">
-        <span>Que te saque una sonrisa!!!</span>
+        <span>Un gusto!!</span>
     </div>
     <div class="button">
         <button>
