--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <div class="greetings">
-        <span>Hola Olga, espero que estes teniendo una buena noche</span>
+        <span>Hola Yeela, espero que estes teniendo una excelente noche</span>
 
     </div>
     <div class="description">
-        <span>Un gusto!!</span>
+        <span>Un gusto, me caiste bin!!</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Presiona para recibir un regalo😊</a>
+            <a href="flower.html">Presiona para recibir una sorpresa</a>
         </button>
         
     </div>
