--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="greetings">
-        <span>Hola Linda, espero que estes teniendo una excelente dia/span>
+        <span>Hola Aleynna, espero que estes teniendo una buena noche</span>
 
     </div>
     <div class="description">
-        <span>Esto te alegrara el dia!!</span>
+        <span>Disfrutaaaa!!</span>
     </div>
     <div class="button">
         <button>
