--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="greetings">
-        <span>Hola Aleynna, espero que estes teniendo una buena noche</span>
+        <span>Hola bonita, espero que estes teniendo una buena noche</span>
 
     </div>
     <div class="description">
